--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -8,19 +8,19 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
@@ -28,7 +28,7 @@ body {
 /*
 changed .header div{} to nav{}
 */
-nav {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -39,14 +39,14 @@ nav {
 /*
 changed .header div ul{} to .links{}
 */
-.links {
+header nav ul {
     list-style-type: none;
 }
 
 /*
 changed .header div ul li{} to .links li{}
 */
-.links li {
+nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -79,7 +79,7 @@ p {
     margin-left: 25px;
 }
 
-.content {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
@@ -87,7 +87,7 @@ p {
  /*
 changed .benefits to .benefits-block
  */
-.benefits-block {
+.benefits {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -154,7 +154,7 @@ and combined into a single content-figures img{}
 deleted all .search-engine-optimization h2 {}, .online-reputation-management h2{}, .social-media-marketing h2 {}
 and combined into a single .caption h2{}
 */
-.caption h2{
+.content-figures h2{
     margin-bottom: 20px;
     font-size: 36px;
 }
