--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -26,7 +26,7 @@ header h1 .seo {
 
 
 /*
-changed .header div{} to nav{}
+changed header div{} to nav{}
 */
 header nav {
     padding-top: 15px;
@@ -82,7 +82,7 @@ main {
 }
 
 
-.benefits {
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
